# kelora

./: .gitignore  .kelorarc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  EXAMPLES.md  EXPLORATION-explicit-api.md  EXPLORATION-final-api.md  EXPLORATION-misdetection-risk.md  EXPLORATION-number-parsing.md  Justfile  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  help-screen.txt  json  logfmt  mkdocs.yml  test_config.toml  test_data.jsonl  test_error_report.txt  test_kelora.sh  test_script.rhai
.cargo/: audit.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: .gitignore  README.md  bench_micro_search.rs  bench_rhai_startup.rs  bench_simple_cases.py  compare_tools.sh  generate_comparison_data.sh  generate_test_data.py  run_benchmarks.sh
dev/: absorb.md  auto-detect-plan.md  auto-suffix-examples-review.md  backlog.md  better-docs.md  changelog.md  check-no-networking.sh  check-subprocess-usage.sh  cleanup.md  code-quality-review.md  debug_implementation_plan.md  docker.md  docs-architecture.md  docs-improvements.md  dos-protection.md  drain-output-spec.md  errors-and-metrics.md  example_logs.md  feature-ideas-missing.md  file-ops.md  filter-context.md  findings_report.md  flush.md  generate_examples.sh  guidelines.md  gzip.md  hashing.md  how-to-guides-assessment.md  improvements.md  input-spec.md  logjuicer-baseline-novelty.md  micro-search.md  missing-features.md  more-tests.md  more-tests2.md  named-formats.md  parse_cols.md  patterns.md  performance-build-profile-2026-06-09.md  performance-ideas-claude.md  (+35 more)
docs/: COOKBOOK.md  absorb.md  faq.md  features.md  glossary.md  index.md  installation.md  integration-guide.md  quickstart.md  timestamp-filtering.md  troubleshooting.md  whats-new-2.0.md
docs/concepts/: benchmark-results.md  configuration-system.md  error-handling.md  events-and-fields.md  index.md  multiline-strategies.md  performance-comparisons.md  performance-model.md  pipeline-model.md  scripting-stages.md
docs/design/: metrics-cli-ergonomics.md
docs/how-to/: analyze-web-traffic.md  batch-process-archives.md  build-streaming-alerts.md  debug-issues.md  extract-and-mask-sensitive-data.md  fan-out-nested-structures.md  find-errors-in-logs.md  handle-multiline-stacktraces.md  incident-response-playbooks.md  index.md  integrate-external-tools.md  inter-record-analysis.md  merge-timestamp-sorted-files.md  monitor-application-health.md  parse-syslog-files.md  power-user-techniques.SHOWCASE-DRAFT.md  power-user-techniques.md  process-csv-data.md  pseudonymize-identifiers-for-analytics.md  span-aggregation-cookbook.md  stateful-processing.md
docs/reference/: cli-reference.md  common-errors.md  exit-codes.md  formats.md  functions.md  index.md  rhai-cheatsheet.md  script-variables.md  time-reference.md
docs/stylesheets/: ansi-colors.css
docs/tutorials/: advanced-scripting.md  basics.md  begin-end-stages.md  composed-pipelines.md  configuration-and-reusability.md  index.md  intro-to-rhai.md  metrics-and-tracking.md  parsing-custom-formats.md  pipeline-stages.md  scripting-transforms.md  span-aggregation.md  working-with-time.md
example_logs/: sample.jsonl  sample.syslog
examples/: ADVANCED.md  README.md  analytics.jsonl  api_errors.jsonl  api_latency_incident.jsonl  api_logs.jsonl  app_monitoring.jsonl  audit.jsonl  audit_findings.jsonl  auth-logs.jsonl  auth_burst.jsonl  basics.jsonl  batch_settlements.jsonl  csv_typed.csv  database_queries.jsonl  deeply-nested.jsonl  deploy_tail.jsonl  display_helpers.rhai  duration_logs.jsonl  enrich_events.rhai  error-logs.jsonl  errors_csv_ragged.csv  errors_exec_transform.jsonl  errors_filter_runtime.jsonl  errors_json_mixed.jsonl  errors_json_types.jsonl  fan_out_batches.jsonl  helpers.rhai  incident_workflow_exec.rhai  json_arrays.jsonl  json_nested_deep.jsonl  k8s_security.jsonl  levelmap-demo.jsonl  mixed_format_demo.sh  nightmare_deeply_nested_transform.jsonl  patterns.rhai  payments_latency.jsonl  production-errors.jsonl  resolve_fields.rhai  security_audit.jsonl  (+13 more)
experiments/: tracking-api-test.sh
fuzz/: Cargo.toml
fuzz/corpus/json_parser/: regression_large_relative.json  regression_very_large_relative.json
fuzz/fuzz_targets/: json_parser.rs  multiline_chunker.rs  regex_parser.rs
homebrew-tap-template/: README.md  SETUP.md
homebrew-tap-template/Formula/: kelora.rb
proptest-regressions/parsers/: auto_detect.txt
skills/log-analysis/: SKILL.md
src/: args.rs  byte_size.rs  cli.rs  colors.rs  config.rs  config_file.rs  debug.rs  decompression.rs  detection.rs  drain.rs  engine.rs  error_handling.rs  event.rs  field_discovery.rs  formatters.rs  interactive.rs  lib.rs  main.rs  parallel.rs  parsers.rs  pipeline.rs  platform.rs  readers.rs  runner.rs  stats.rs  test_env.rs  timestamp.rs  tty.rs  unix.rs
src/analysis/: mod.rs  (+3 more)
stress-tests/: STRESS_TEST_REPORT.md
test_data/: sample.logfmt  sample.nginx
tests/: .gitignore  ast_field_extraction.rs  auto_detect_integration_test.rs  auto_per_file_integration_test.rs  basic_tests.rs  cascade_format_tests.rs  conf_integration_test.rs  config_integration_test.rs  context_integration_test.rs  csv_multiline_tests.rs  datetime_integration_test.rs  decompression_tests.rs  diagnostics_gating_tests.rs  disabled_tests.rs  discover_integration_test.rs  emit_integration_test.rs  empty_line_tests.rs  error_handling_tests.rs  field_access_tests.rs  file_operations_tests.rs  filtering_tests.rs  format_parser_tests.rs  hashing_integration_test.rs  head_limit_tests.rs  help_topic_tests.rs  init_integration_test.rs  input_handling_tests.rs  integration_tests.rs  inter_record_examples_test.rs  inter_record_integration_test.rs  lossy_utf8_tests.rs  max_line_bytes_tests.rs  metrics_tracking_tests.rs  micro_search_tests.rs  multiline_tests.rs  network_functions_tests.rs  output_formatting_tests.rs  parallel_tests.rs  prefix_extraction_tests.rs  random_integration_test.rs  (+10 more)
vhs/: README.md  colored-output.tape  context-highlighting.tape  error-triage.tape  hero.tape  levelmap.tape  mark-gaps.tape
(+112 files in other folders)
