[package]
name = "kelora"
version = "0.2.0"
edition = "2021"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
description = "A command-line log analysis tool with embedded Rhai scripting"
license = "MIT"
repository = "https://github.com/dloss/kelora"
keywords = ["logging", "parser", "cli", "logfmt", "json"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1.10"
anyhow = "1.0"
rhai = { version = "1.22", features = ["sync"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
is-terminal = "0.4"
indexmap = "2.0"
signal-hook = "0.3"
flate2 = "1.0"
nom = "7.1"
shell-words = "1.1"
csv = "1.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"