[package]
name = "kelora"
version = "0.9.0"
edition = "2021"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
description = "A command-line log analysis tool with embedded Rhai scripting"
license = "MIT"
repository = "https://github.com/dloss/kelora"
keywords = ["logging", "parser", "cli", "logfmt", "json"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1.10"
anyhow = "1.0"
rhai = { version = "1.22", features = ["sync", "debugging"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
is-terminal = "0.4"
indexmap = "2.0"
signal-hook = { version = "0.3", features = ["iterator"] }
flate2 = "1.0"
zstd = "0.13"
nom = "8"
shell-words = "1.1"
csv = "1.3"
once_cell = "1.19"
fastrand = "2.0"
lazy_static = "1.4"
base64 = "0.22"
hex = "0.4"
humantime = "2.1"
urlencoding = "2.1"
html-escape = "0.2"
terminal_size = "0.4.3"
url = "2.5"
lru = "0.12"
unicode-normalization = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
hmac = "0.12"
ipnet = "2.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "micro_search"
path = "benchmarks/bench_micro_search.rs"
harness = false
