[package]
name = "kelora-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kelora = { path = ".." }

[[bin]]
name = "json_parser"
path = "fuzz_targets/json_parser.rs"
test = false
doc = false

[[bin]]
name = "regex_parser"
path = "fuzz_targets/regex_parser.rs"
test = false
doc = false
